--- a/style.css
+++ b/style.css
@@ -55,3 +55,52 @@ h1 {
     border-color: #ced4da;
     outline: 0;
 }
+
+/* =========================== advanced_search page ========================== */
+
+body#adv_search_page {
+    font-family: arial, sans-serif;
+  }
+
+label.advSearch {
+    font-size:12px;
+
+  }
+
+  div.divLabel {
+    min-width: 167px;
+    width:16%;
+    line-height:16px;
+    vertical-align: middle;
+    display:inline-block;
+  }
+
+  div.divInput {
+    min-width:167px;
+    line-height:16px;
+    vertical-align: middle;
+    min-height:41px;
+    width:46%;
+    display:inline-block;
+  }
+
+  div.divSpan {
+    min-width:167px;
+    width:36%;
+    color:#555555;
+    font-size:11px;
+    padding-left:5px;
+    float:right;
+    line-height:16px;
+  }
+
+  #myInputs input {
+    border-radius:1px;
+    text-align:left;
+    width:100%;
+    border:1px solid #d9d9d9;
+    font-size:13px;
+    height:25px;
+    padding:1px 8px;
+  }
+  
