--- a/style.css
+++ b/style.css
@@ -67,31 +67,50 @@ label.advSearch {
 
   }
 
-  div.divLabel {
+  div.divLabel, div.divInput, div.divButton, div.divSpan {
     min-width: 167px;
-    width:16%;
     line-height:16px;
+  } 
+  
+  div.divInput, div.divButton {
+    width:36%;
+    vertical-align: middle;
+  }
+
+  div.divLabel {
+    width:16%;
     vertical-align: middle;
     display:inline-block;
   }
 
-  div.divInput {
-    min-width:167px;
-    line-height:16px;
-    vertical-align: middle;
+  div.divInput, div.divButton {
     min-height:41px;
-    width:46%;
     display:inline-block;
+  }
+  
+  div.divButton {
+    text-align:right;
   }
 
   div.divSpan {
-    min-width:167px;
-    width:36%;
+    width:46%;
     color:#555555;
     font-size:11px;
     padding-left:5px;
     float:right;
-    line-height:16px;
+    }
+  #myInputs {
+    padding-left:10px;
+  }
+  
+  #advSearchHeading {
+    color:#d93025; 
+    font-size: 20px; 
+    margin: 20px 10px;
+  } 
+
+  #smallDoodle {
+    padding:20px;
   }
 
   #myInputs input {
@@ -104,3 +123,11 @@ label.advSearch {
     padding:1px 8px;
   }
   
+  input#button-submit {
+    text-align:center;
+    line-height:100%;
+    height:30px;
+    min-width:120px;
+    width:130px;
+    margin:20px 5px; 
+  }
