--- a/style.css
+++ b/style.css
@@ -1,133 +1,165 @@
+/* ============== icons in the search input ============== */
+#myKeyboard {
+  margin: auto 0 auto -80px;
+  z-index: 200;
+}
+
+#myImageKeyboard {
+  margin: auto 0 auto -105px;
+  z-index: 200;
+}
+
+#myMic,
+#myCamera,
+#mySearch {
+  margin: auto 0 auto 10px;
+}
+#myMic {
+  z-index: 201;
+}
+#myCamera {
+  z-index: 202;
+}
+/* ================== additional image search icon for the pic page input ================== */
+#mySearch {
+  z-index: 203;
+}
+/* ============================================= */
 .google-like {
-    font-size:13px
+  font-size: 13px;
 }
-ul.col {
-    text-align:right;margin-top:1em;
+.col {
+  margin-top: 1em;
+  text-align: right;
 }
-ul.google-like li {
-    display:inline; padding:.5em 1.5em;
+.google-like li {
+  display: inline;
+  padding: 0.5em 1.5em;
 }
-ul.google-like li a {
-    color:rgba(0,0,0,0.87);
+.google-like li a {
+  color: rgba(0, 0, 0, 0.87);
 }
 
 h1 {
-    text-align:center;
+  text-align: center;
 }
 .pictures-span {
-    font-size:15px;
-    display:block;
-    float:right;
-    margin-top:-3em;
+  display: block;
+  float: right;
+  font-size: 15px;
+  margin-top: -3em;
 }
-.blue_letter,.pictures-span {
-    color:#4284f7;
+.blue_letter,
+.pictures-span {
+  color: #4284f7;
 }
 .red_letter {
-    color:#ef4239;
+  color: #ef4239;
 }
 .yellow_letter {
-    color:#ffbd08;
+  color: #ffbd08;
 }
 .green_letter {
-    color:#31ab52;
+  color: #31ab52;
 }
 #theDoodle {
-    margin:3.2em auto .8em auto;
-    font-weight:600;
-    font-size:380%;
-    width:67%;
-    transform: scale(1.5,1.5);
-    letter-spacing:-3px;
+  font-size: 380%;
+  font-weight: 600;
+  letter-spacing: -3px;
+  margin: 3.2em auto 0.8em auto;
+  transform: scale(1.5, 1.5);
+  width: 67%;
 }
 #input-search {
-    border-left:none;
-    border-radius: 0 1em 1em 0;
-    width:85%;
+  border-left: none;
+  border-radius: 0 1em 1em 0;
+  width: 85%;
 }
 #looking-glass span {
-    border-radius: 1em 0 0 1em;
+  border-radius: 1em 0 0 1em;
 }
 #input-search:focus {
-    color: #495057;
-    background-color: #fff;
-    box-shadow:none;
-    border-color: #ced4da;
-    outline: 0;
+  background-color: #fff;
+  border-color: #ced4da;
+  box-shadow: none;
+  color: #495057;
+  outline: 0;
+}
+/* =========================== advanced_search page ========================== */
+#adv_search_page {
+  font-family: arial, sans-serif;
 }
 
-/* =========================== advanced_search page ========================== */
-
-body#adv_search_page {
-    font-family: arial, sans-serif;
-  }
-
 label.advSearch {
-    font-size:12px;
+  font-size: 12px;
+}
 
-  }
+div.divLabel,
+div.divInput,
+div.divButton,
+div.divSpan {
+  line-height: 16px;
+  min-width: 167px;
+}
 
-  div.divLabel, div.divInput, div.divButton, div.divSpan {
-    min-width: 167px;
-    line-height:16px;
-  } 
-  
-  div.divInput, div.divButton {
-    width:36%;
-    vertical-align: middle;
-  }
+div.divInput,
+div.divButton {
+  vertical-align: middle;
+  width: 36%;
+}
 
-  div.divLabel {
-    width:16%;
-    vertical-align: middle;
-    display:inline-block;
-  }
+div.divLabel {
+  display: inline-block;
+  vertical-align: middle;
+  width: 16%;
+}
 
-  div.divInput, div.divButton {
-    min-height:41px;
-    display:inline-block;
-  }
-  
-  div.divButton {
-    text-align:right;
-  }
+div.divInput,
+div.divButton {
+  display: inline-block;
+  min-height: 41px;
+}
 
-  div.divSpan {
-    width:46%;
-    color:#555555;
-    font-size:11px;
-    padding-left:5px;
-    float:right;
-    }
-  #myInputs {
-    padding-left:10px;
-  }
-  
-  #advSearchHeading {
-    color:#d93025; 
-    font-size: 20px; 
-    margin: 20px 10px;
-  } 
+div.divButton {
+  text-align: right;
+}
 
-  #smallDoodle {
-    padding:20px;
-  }
+div.divSpan {
+  color: #555555;
+  float: right;
+  font-size: 11px;
+  padding-left: 5px;
+  width: 46%;
+}
+#myInputs {
+  padding-left: 10px;
+}
 
-  #myInputs input {
-    border-radius:1px;
-    text-align:left;
-    width:100%;
-    border:1px solid #d9d9d9;
-    font-size:13px;
-    height:25px;
-    padding:1px 8px;
-  }
-  
-  input#button-submit {
-    text-align:center;
-    line-height:100%;
-    height:30px;
-    min-width:120px;
-    width:130px;
-    margin:20px 5px; 
-  }
+#advSearchHeading {
+  color: #d93025;
+  font-size: 20px;
+  margin: 20px 10px;
+}
+
+#smallDoodle {
+  padding: 20px;
+}
+
+#myInputs input {
+  border: 1px solid #d9d9d9;
+  border-radius: 1px;
+  font-size: 13px;
+  height: 25px;
+  padding: 1px 8px;
+  text-align: left;
+  width: 100%;
+}
+
+input#button-submit {
+  height: 30px;
+  line-height: 100%;
+  margin: 20px 5px;
+  min-width: 120px;
+  text-align: center;
+  width: 130px;
+}
